cohort3/triforciacohort3pack/force-app/main/default/objects/Lead/fields/Ad__c.field-meta.xml
<CustomField>
    <fullName>Ad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ad</label>
    <referenceTo>Ad__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>