cohort3/triforciacohort3pack/force-app/main/default/objects/Lead/fields/Info_Session_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Info_Session_Date_Time__c</fullName>
    <label>Info Session Date Time</label>
    <type>DateTime</type>
</CustomField>