cohort3/triforciacohort3pack/force-app/main/default/objects/Lead/fields/Interested_Path__c.field-meta.xml
<CustomField>
    <fullName>Interested_Path__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interested Path</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>